// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Card/Subtitle should render a card subtitle 1`] = `
".a {
  color: #000;
}
.b {
  margin-top: calc(-0.5 * 0.5rem);
}
.c {
  margin-bottom: 0;
}


<div data-testid="card-subtitle" class="a b c">Card Subtitle</div>
;
"
`;

exports[`components/Card/Subtitle should render a card subtitle using custom color 1`] = `
".a {
  color: #d1c8ae;
}
.b {
  margin-top: calc(-0.5 * 0.5rem);
}
.c {
  margin-bottom: 0;
}


<div data-testid="card-subtitle" class="a b c">Card Subtitle</div>
;
"
`;
